# fasta_vocab_builder

./: .gitignore  CHANGELOG.md  job.sh  pyproject.toml  requirements.txt
src/: build_vocabulary.py  utils.py
